CRUD PRODUCTOS Multi Languaje Con cambio de lengaje Hibernate

--- a/src/main/resources/templates/products/createProduct.html
+++ b/src/main/resources/templates/products/createProduct.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Product Create</title>
+		<title>[[#{product.create.Title}]]</title>
 	</head>
 	<body>
-		<h1>Product Create</h1>
+		<h1>[[#{product.create.Title}]]</h1>
 		<form enctype="multipart/form-data" method="post" th:object="${productDTO}">
 			<div>
 				<label>Type</label>
