--- a/src/main/resources/templates/products/editProduct.html
+++ b/src/main/resources/templates/products/editProduct.html
@@ -5,6 +5,7 @@
 		<title>Product Edit</title>
 	</head>
 	<body>
+		<div th:replace="fragments/header :: header">&nbsp;</div>
 		<h1>Product Edit</h1>
 		<form enctype="multipart/form-data" method="post" th:object="${productDTO}">
 			<div>
@@ -68,5 +69,6 @@
 			<button type="submit">Submit</button>
 			<a href="/products">Back</a>
 		</form>
+		<div th:insert="~{fragments/footer :: footer}">&copy; 2017 The Static Templates</div>
 	</body>
 </html>
