--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -8,7 +8,7 @@
 			&copy; <span th:text="${#temporals.format(#temporals.createNow(), 'yyyy')}">2024</span>
 
 			<label>[[#{idioma.Idioma}]]</label>
-			<form th:action="@{/products}" method="get">
+			<form method="get">
 				<button type="submit" name="lang" value="en" th:class="${#locale.language == 'en'} ? 'active' : ''">[[#{idioma.English}]]</button>
 				<button type="submit" name="lang" value="es" th:class="${#locale.language == 'es'} ? 'active' : ''">[[#{idioma.Español}]]</button>
 				<button type="submit" name="lang" value="it" th:class="${#locale.language == 'it'} ? 'active' : ''">[[#{idioma.Italiano}]]</button>
