--- a/src/main/resources/templates/products/editProduct.html
+++ b/src/main/resources/templates/products/editProduct.html
@@ -9,8 +9,7 @@
 		<div th:replace="fragments/header :: header">&nbsp;</div>
 		<h1>[[#{product.edit.Title}]]</h1>
 		<form enctype="multipart/form-data" method="post" th:object="${productDTO}">
-			<div>
-				<label>Type</label>
+			<label>[[#{product.Type}]]
 				<select th:field="${productDTO.type}">
 					<option value="1">Product</option>
 					<option value="0">Service</option>
@@ -19,25 +18,22 @@
 					<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('type')}"
 						 th:text="${error}"></li>
 				</ul>
-			</div>
-			<div>
-				<label>Code</label>
+			</label>
+			<label>[[#{product.Code}]]
 				<input th:field="${productDTO.code}"/>
 				<ul>
 					<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('code')}"
 						 th:text="${error}"></li>
 				</ul>
-			</div>
-			<div>
-				<label>Description</label>
-				<textarea th:field="${productDTO.description}"></textarea>
+			</label>
+			<label>[[#{product.Description}]]
+				<input th:field="${productDTO.description}"></input>
 				<ul>
 					<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('description')}"
 						 th:text="${error}"></li>
 				</ul>
-			</div>
-			<div>
-				<label>Measure</label>
+			</label>
+			<label>[[#{product.Measure}]]
 				<select th:field="${productDTO.measure}">
 					<option value="u">Unit</option>
 					<option value="kg">Kilogram</option>
@@ -49,30 +45,28 @@
 					<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('measure')}"
 						 th:text="${error}"></li>
 				</ul>
-			</div>
-			<div>
-				<label>Price</label>
-					<input min="0" th:field="${productDTO.price}" type="number">
-					<ul>
-						<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('price')}"
-							 th:text="${error}"></li>
-					</ul>
-				</div>
-			<div>
-				<label>IVA Fee</label>
-					<select th:field="${productDTO.ivaFee}">
-						<option value="0">0%</option>
-						<option value="0.5">0.5%</option>
-						<option value="1">1%</option>
-						<option value="4">4%</option>
-						<option value="8">8%</option>
-						<option value="13">13%</option>
-					</select>
-					<ul>
-						<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('ivaFee')}"
-							 th:text="${error}"></li>
-					</ul>
-				</div>
+			</label>
+			<label>[[#{product.Price}]]
+				<input min="0" th:field="${productDTO.price}" type="number">
+				<ul>
+					<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('price')}"
+						 th:text="${error}"></li>
+				</ul>
+			</label>
+			<label>[[#{product.IvaFee}]]
+				<select th:field="${productDTO.ivaFee}">
+					<option value="0">0%</option>
+					<option value="0.5">0.5%</option>
+					<option value="1">1%</option>
+					<option value="4">4%</option>
+					<option value="8">8%</option>
+					<option value="13">13%</option>
+				</select>
+				<ul>
+					<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('ivaFee')}"
+						 th:text="${error}"></li>
+				</ul>
+			</label>
 			<button type="submit">[[#{action.Submit}]]</button>
 			<a href="/products">[[#{action.Back}]]</a>
 		</form>
