--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,6 +9,7 @@
 		<div th:replace="fragments/header :: header">&nbsp;</div>
 		<div>
 			<h1>[[#{main.Welcome}]]</h1>
+			<p th:text="${resultado}"></p>
 		</div>
 		<div th:insert="~{fragments/footer :: footer}">&copy; 2017 The Static Templates</div>
 	</body>
