Modelo 3 Capas - Logic - Data - Presentation MVC Producto

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,7 +11,7 @@
 			<div class="navbar-collapse collapse">
 				<ul >
 					<li>
-						<a th:href="@{/products}">[[#{header.Products}]]</a>
+						<a th:href="@{/presentantion/productos}">[[#{header.Products}]]</a>
 					</li>
 				</ul>
 				<ul>
