HaciendaSTUB Cliente(en proceso)

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,6 +14,11 @@
 						<a th:href="@{/presentantion/productos}">[[#{header.Products}]]</a>
 					</li>
 				</ul>
+				<ul >
+					<li>
+						<a th:href="@{/presentantion/clientes}">[[#{header.Clientes}]]</a>
+					</li>
+				</ul>
 				<ul>
 					<li>
 						<a>
