--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,6 @@
 			</div>
 			<a href="main">[[#{login.Login}]]</a>
 		</div>
-		<div th:insert="~{fragments/footer :: footer}">&copy; 2017 The Static Templates</div>
+		<div th:insert="~{fragments/footer :: footer}"></div>
 	</body>
 </html>
