--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -11,6 +11,6 @@
 			<h1>[[#{main.Welcome}]]</h1>
 			<p th:text="${resultado}"></p>
 		</div>
-		<div th:insert="~{fragments/footer :: footer}">&copy; 2017 The Static Templates</div>
+		<div th:insert="~{fragments/footer :: footer}"></div>
 	</body>
 </html>
