--- a/src/main/resources/templates/presentantion/productos/createProducto.html
+++ b/src/main/resources/templates/presentantion/productos/createProducto.html
@@ -73,6 +73,6 @@
 				<a href="/presentantion/productos">[[#{action.Back}]]</a>
 			</div>
 		</form>
-		<div th:insert="~{fragments/footer :: footer}">&copy; 2017 The Static Templates</div>
+		<div th:insert="~{fragments/footer :: footer}"></div>
 	</body>
 </html>
