--- a/src/main/resources/templates/presentantion/productos/editProducto.html
+++ b/src/main/resources/templates/presentantion/productos/editProducto.html
@@ -70,6 +70,6 @@
 			<button type="submit">[[#{action.Submit}]]</button>
 			<a href="/presentantion/productos">[[#{action.Back}]]</a>
 		</form>
-		<div th:insert="~{fragments/footer :: footer}">&copy; 2017 The Static Templates</div>
+		<div th:insert="~{fragments/footer :: footer}"></div>
 	</body>
 </html>
