--- a/src/main/resources/templates/presentantion/productos/index.html
+++ b/src/main/resources/templates/presentantion/productos/index.html
@@ -33,6 +33,6 @@
 				</tbody>
 			</table>
 		</div>
-		<div th:insert="~{fragments/footer :: footer}">&copy; 2017 The Static Templates</div>
+		<div th:insert="~{fragments/footer :: footer}"></div>
 	</body>
 </html>
