--- a/src/main/resources/templates/presentantion/productos/viewProducto.html
+++ b/src/main/resources/templates/presentantion/productos/viewProducto.html
@@ -50,6 +50,6 @@
 			<br/><br/>
 			<a href="/presentantion/productos">[[#{action.Back}]]</a>
 		</div>
-		<div th:insert="~{fragments/footer :: footer}">&copy; 2017 The Static Templates</div>
+		<div th:insert="~{fragments/footer :: footer}"></div>
 	</body>
 </html>
