--- a/src/main/resources/templates/presentantion/clientes/createCliente.html
+++ b/src/main/resources/templates/presentantion/clientes/createCliente.html
@@ -8,25 +8,27 @@
 	<body>
 		<div th:replace="fragments/header :: header">&nbsp;</div>
 		<h1>[[#{cliente.create.Title}]]</h1>
+		<hr>
 		<form enctype="multipart/form-data" method="post" th:object="${cliente}">
 			<div>
 				<label>[[#{cliente.Id}]]
-					<input th:field="${cliente.id}"/>
-					<button type="button" id="getClienteHacienda" value="getClienteHacienda" >Buscar</button>
+					<input th:field="${cliente.id}" th:required="required"/>
+					<button type="submit" name="add" value="add">[[#{action.Search}]]</button>
 					<ul>
 						<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('id')}"
 							 th:text="${error}"></li>
+						<li th:if="${error}" class="error" th:text="${error}"></li>
 					</ul>
 				</label>
 				<label>[[#{cliente.Name}]]
-					<input disabled th:field="${cliente.name}"/>
+					<input th:readonly="true" th:field="${cliente.name}"/>
 					<ul>
 						<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('name')}"
 							 th:text="${error}"></li>
 					</ul>
 				</label>
 				<label>[[#{cliente.Email}]]
-					<input disabled th:field="${cliente.email}"/>
+					<input th:readonly="true" th:field="${cliente.email}"/>
 					<ul>
 						<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('email')}"
 							 th:text="${error}"></li>
